- First draft formatting to all of signupoptional - Still issues with angular state updates being one step behind

--- a/src/app/shared/components/nemo-datetime/nemo-datetime.component.scss
+++ b/src/app/shared/components/nemo-datetime/nemo-datetime.component.scss
@@ -7,7 +7,10 @@
 ion-slides {
     width: 30%;
     height: 12vh;
-    font-size: 5vh;
+}
+
+ion-slide {
+    font-size: 2.7vh;
 }
 
 #day {
